# RustWalletGenerator

./: Cargo.toml
src/: main.rs
