[package]
name = "generate_wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
secp256k1 = { version = "0.27.0", features = ["rand"] }
tokio = { version= "1", features = ["full"] }
web3 = "0.19.0"
hex = "0.4"
